Closed Bug 322786 Opened 20 years ago Closed 20 years ago

[FIX]ASSERTION: Could not find an adaptor! (<xul:scrollbox> inside inline element)

Categories

(Core :: XUL, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: jruderman, Assigned: bzbarsky)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

To reproduce, just load the testcase in a debug build. ###!!! ASSERTION: Could not find an adaptor!: 'Error', file /Users/admin/trunk/mozilla/layout/xul/base/src/nsBoxFrame.cpp, line 677
Attached file testcase
Attached patch Proposed patchSplinter Review
When we append the scrolled frame to the scrollframe, the scrollframe tries to reflow itself... so the inline tries to reflow itself. But the inline is not in the tree yet. Hence the assert. The solution, I think, is to not try to reflow yourself on a child append if there has been no initial reflow yet.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #207959 - Flags: superreview?(roc)
Attachment #207959 - Flags: review?(roc)
OS: MacOS X → All
Priority: -- → P3
Hardware: Macintosh → All
Summary: ASSERTION: Could not find an adaptor! (<xul:scrollbox> inside inline element) → [FIX]ASSERTION: Could not find an adaptor! (<xul:scrollbox> inside inline element)
Target Milestone: --- → mozilla1.9alpha
Attachment #207959 - Flags: superreview?(roc)
Attachment #207959 - Flags: superreview+
Attachment #207959 - Flags: review?(roc)
Attachment #207959 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Crashtest checked in.
Flags: in-testsuite+
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: