No need to try to mark ourselves or our kids dirty if we've not seen an initial reflow.  Bug 322786, r+sr=roc